--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ li{
 }
 
 .header {
-  background-color: #E9967A;
+  background-color: #E6E6FA;
   color: #fff;
   height: 100px;
   }
@@ -25,7 +25,7 @@ li{
 }
 
 .main {
-  background-color: #8FBC8F;
+  background-color: #E6E6FA;
   height: 700px;
 }
 
